--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,9 @@
     "background": {
         "persistent": false,
         "scripts": [
-            "js/omniboxEvents.js"
+            "js/lib/md5-min.js",
+            "js/lib/rtm.js",
+            "js/omni.js"
         ]
     },
 
