--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Kieranties/Smoothie/issues"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-string-replace": "~0.2.4",
+    "grunt-replace": "~0.4.4",
+    "grunt-contrib-clean": "~0.5.0"
   }
 }
