--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-string-replace": "~0.2.4",
     "grunt-replace": "~0.4.4",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
